fix whitespace

--- a/theme/static/main.css
+++ b/theme/static/main.css
@@ -181,6 +181,7 @@ strong {
 
 .article-comments li {
   margin-left: 1rem;
+  white-space: nowrap;
 }
 
 .article-footer {
